--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -2,7 +2,9 @@ body {
   background: #eee;
   font-family: sans-serif;
 }
-
+*{
+  padding: 8px;
+}
 .card {
   width: 400px;
   background: #fff;
@@ -11,17 +13,27 @@ body {
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  margin-bottom: 8px;
 }
 
 .content {
+  margin-bottom: 8px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   background: #e3f4ff;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
 }
 
 button {
+  display:block;
   background: white;
   border: 1px solid #eee;
+  padding-left: 24px;
+  padding-right:24px;
+  margin: auto;
 }
