--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  padding: 8px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -14,6 +19,11 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  margin: 0px;
+  padding: 0px;
+  gap: 8px;
+
 }
 
 a {
@@ -22,4 +32,14 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  margin:8px;
+
+}
+
+.right-links{
+  justify-content: flex-end;
+}
+
+.left-links{
+  justify-content: flex-start;
 }
