--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
 }
 
 .profile-image {
@@ -27,6 +31,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 16px;
 }
 
 button {
@@ -35,14 +40,31 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin: 16px;
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  margin: 16px;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  justify-content: row;
+  align-items: center;
+}
+
+.left-stuff{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.right-stuff{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
