--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -5,11 +5,14 @@ body {
 img {
   width: 100px;
   height: 100px;
+  margin: auto
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin: 32px; 
 }
 
 /* do not edit this footer */
@@ -23,4 +26,19 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.element{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  max-width: 200px;
+}
+
+.items{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 52px; 
 }
