--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px;
 }
 
 input {
@@ -23,4 +26,55 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+ul{
+  list-style-type: none;
+}
+
+a{
+  text-decoration: none;
+  color: gray
+}
+
+.buttons{
+  display: flex;
+  padding: 8px;
+  gap: 8px;
+}
+
+.content{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 8px;
+}
+
+.left-links{
+  display:flex;
+  gap: 16px;
+  align-items: flex-start;
+}
+
+.right-links{
+  display:flex;
+  gap: 16px;
+  margin-right: 40px;
+}
+
+.footer{
+  display:flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  background-color: lightgray;
+  padding: 8px;
 }
